# zotero-fulltext-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  config.example.json  plan-mcp-instruction-and-contract-robustness.md  plan-mcp-server-hardening.md  plan-public-release-readiness.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: recognition.py  scoring.py
benchmarks/preprints/: ATTRIBUTION.md  labels.json  sources.json
docs/: architecture.md  data-dictionary.md  debug-bridge-setup.md  ingestion.md  library-cleanup.md  operations.md  planned-figure-extraction.md  troubleshooting.md
src/zotero_pdf_text/: __init__.py  _atomic.py  _extract_markdown.py  _extract_markdown_marker.py  _ollama_client.py  artifacts.py  bibtex.py  cli.py  config.py  (+22 more)
tests/: test_artifacts.py  test_benchmark_preprints.py  test_bibtex.py  test_check_setup.py  test_cli.py  test_config.py  test_converter.py  test_duplicate_attachments.py  test_extract_markdown.py  test_extract_markdown_marker.py  test_fts.py  test_identity.py  test_image_ocr.py  test_image_ocr_commit.py  test_indexer.py  test_ingestion.py  test_lock.py  test_mapper.py  test_math_detection.py  test_math_ocr.py  test_mcp_protocol.py  test_mcp_server.py  test_ocr_corpus.py  test_ollama_client.py  test_orphan_candidates.py  test_orphan_discovery.py  test_packaging.py  test_recognition_scoring.py  test_retry_timeout.py  test_runtime.py  test_timeout_candidates.py  test_verifier.py  test_zotero_db.py  test_zotero_write.py
tools/: build_ocr_corpus.py  build_preprint_benchmark.py  score_recognition.py
(+6 files in other folders)
