[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-fulltext-mcp"
version = "0.2.0"
description = "Convert a Zotero library's linked PDF attachments to Markdown, build a full-text search index, and expose it via an MCP server."
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.24",
  "pymupdf4llm>=0.0.17",
  "pyyaml>=6.0",
  "rapidfuzz>=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_pdf_text"]

[project.scripts]
zotero-pdf-text = "zotero_pdf_text.cli:main"
zotero-fulltext-mcp = "zotero_pdf_text.mcp_server:main"

[project.optional-dependencies]
mcp = [
  "mcp>=1.28,<2",
]
zotero-write = [
  "pyzotero>=1.6",
]
marker = [
  "marker-pdf>=1.0",
]
test = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "benchmarks"]
testpaths = ["tests"]
